[metadata]
name = django-blocking-early-warnings
version = 0.1
description = A Django app to check blocking cases based on ooni data.
long_description = file: README.rst
url = https://github.com/VEinteligente/django-blocking-early-warning
author = Gibsy
author_email = gibyvngr@gmail.com
license = BSD-3-Clause  
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.0  
    celery >= 3.1.0
    requests >= 2.25.0
    typing-extensions >= 4.2.0
    mkdocs >= 1.3.0
